--- a/dashboard/apps/configuration/index.html
+++ b/dashboard/apps/configuration/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
   <script src="js/foundation.min.js"></script>
 
 </head>
