--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -239,7 +239,7 @@
       </div>
 
     <script type="text/javascript" src="js/libs/jquery.js">         </script>
-    <script type="text/javascript" src="js/libs/socket.io.js">      </script>
+    <script type="text/javascript" src="socket.io/socket.io.js">      </script>
     <script type="text/javascript" src="js/libs/touche.js">         </script>
     <script type="text/javascript" src="js/libs/foundation.min.js"> </script>
     <script type="text/javascript" src="js/libs/toastr.min.js">     </script>
