--- a/static/passthrough.html
+++ b/static/passthrough.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>G2 Passthrough</title>
-	<link rel="stylesheet" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" href="./css/normalize.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/normalize.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="./js/libs/jquery-1.10.2.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
+	<script src="js/libs/jquery-1.10.2.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="socket.io/socket.io.js"></script>
 	<script>
 	$(document).ready(function(){
 
